feat: api enpoint for flashcard-sets

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
+# Production configuration
 SUPABASE_URL=###
 SUPABASE_KEY=###
+SUPABASE_SERVICE_KEY=###
 OPENROUTER_API_KEY=###
+
+# Test user credentials (for scripts)
+TEST_USER_EMAIL=###
+TEST_USER_PASSWORD=###
+TEST_USER_TOKEN=###
