--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@astrojs/react": "4.2.2",
     "@astrojs/sitemap": "3.3.0",
     "@radix-ui/react-slot": "^1.1.2",
-    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "4.0.17",
     "@types/react": "19.0.12",
     "@types/react-dom": "19.0.4",
@@ -33,6 +32,7 @@
   "devDependencies": {
     "@eslint/compat": "1.2.7",
     "@eslint/js": "9.23.0",
+    "@supabase/supabase-js": "^2.50.0",
     "@typescript-eslint/eslint-plugin": "8.28.0",
     "@typescript-eslint/parser": "8.28.0",
     "eslint": "9.23.0",
@@ -48,6 +48,7 @@
     "husky": "9.1.7",
     "lint-staged": "15.5.0",
     "prettier-plugin-astro": "0.14.1",
+    "tsx": "^4.19.4",
     "typescript-eslint": "8.28.0"
   },
   "lint-staged": {
