--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@astrojs/node": "^9.1.3",
     "@astrojs/react": "4.2.2",
     "@astrojs/sitemap": "3.3.0",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@tailwindcss/vite": "4.0.17",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/vite": "^4.0.17",
     "@types/react": "19.0.12",
     "@types/react-dom": "19.0.4",
     "astro": "5.5.5",
@@ -26,7 +27,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwind-merge": "^3.1.0",
-    "tailwindcss": "4.0.17",
+    "tailwindcss": "^4.0.17",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
