feat: openRouter implementation

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 SUPABASE_URL=###
 SUPABASE_KEY=###
 SUPABASE_SERVICE_KEY=###
-OPENROUTER_API_KEY=###
+VITE_OPENROUTER_API_KEY=###
 
 # Test user credentials (for scripts)
 TEST_USER_EMAIL=###
