--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@astrojs/sitemap": "3.3.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/ssr": "^0.6.1",
     "@tailwindcss/vite": "^4.0.17",
     "@types/react": "19.0.12",
     "@types/react-dom": "19.0.4",
