--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -107,7 +107,7 @@ enabled = true
 # in emails.
 site_url = "http://127.0.0.1:3000"
 # A list of *exact* URLs that auth providers are permitted to redirect to post authentication.
-additional_redirect_urls = ["https://127.0.0.1:3000"]
+additional_redirect_urls = ["http://127.0.0.1:3000", "http://127.0.0.1:3000/auth/reset-password"]
 # How long tokens are valid for, in seconds. Defaults to 3600 (1 hour), maximum 604,800 (1 week).
 jwt_expiry = 3600
 # If disabled, the refresh token will never expire.
@@ -164,15 +164,15 @@ otp_length = 6
 # Number of seconds before the email OTP expires (defaults to 1 hour).
 otp_expiry = 3600
 
-# Use a production-ready SMTP server
-# [auth.email.smtp]
-# enabled = true
-# host = "smtp.sendgrid.net"
-# port = 587
-# user = "apikey"
-# pass = "env(SENDGRID_API_KEY)"
-# admin_email = "admin@email.com"
-# sender_name = "Admin"
+# SMTP configuration for password reset emails
+[auth.email.smtp]
+enabled = true
+host = "supabase_inbucket_10xCards"
+port = 1025
+user = "mailpit"
+pass = "mailpit"
+sender_name = "10xCards"
+admin_email = "noreply@10xcards.local"
 
 # Uncomment to customize email template
 # [auth.email.template.invite]
