--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,13 @@ pnpm-debug.log*
 .env.local
 .env.test
 
-
 # macOS-specific files
 .DS_Store
 
 # jetbrains setting folder
 .idea/
+
+# test artifacts
+test-results/
+playwright-report/
+.last-run.json
