--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-themes": "^0.4.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-router-dom": "^7.8.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.0.17",
